--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <!--swagger依赖结束-->
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
+        </dependency>
     </dependencies>
 
     <build>
